--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.41.2",
+    "react-imask": "^6.4.3",
     "react-router-dom": "^6.6.1",
     "styled-components": "^5.3.6",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.1.3",
     "@types/react": "^18.0.26",
-    "@types/react-router-dom": "^5.3.3",
     "@types/react-dom": "^18.0.9",
+    "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "@types/uuid": "^9.0.0",
     "@vitejs/plugin-react": "^3.0.0",
