--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,13 +23,10 @@ jobs:
           node-version: 16.x
 
       - name: Installing NPM packages
-        run: npm ci
+        run: yarn install
 
       - name: Building project
-        run: npm run build
-
-      - name: Running tests
-        run: npm run test
+        run: yarn build
 
       - name: Uploading production-ready build files
         uses: actions/upload-artifact@v2
