fix: deploy permission

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,8 @@ jobs:
           path: ./dist
 
   deploy:
+    permissions:
+      contents: write
     name: Deploy
     needs: build
     runs-on: ubuntu-latest
